crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R0_plus_R0.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__typenum_ladder__R0_plus_R0.rs:5:24
  |
5 |    let _ = R0::new() + R0::new();
  |                        ^^^^^^^^^ expected `LadderRung<UInt<UTerm, B1>>`, found `LadderRung<UTerm>`
  |
  = note: expected struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>>`
             found struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UTerm>`
